# Simval-Calibration-Certificate

./: .gitignore  AGENTS.md  Design Documentation SIMVal Certificate.md  README.md  pyproject.toml
.github/workflows/: ci.yml
Docs/DANAK Requirements/: AB01 - Generel bestemmelse om akkreditering af virksomheder.md  AB02 - DANAKs akkrediteringsmærke og henvisning til akkreditering.md  AB03 - Akkreditering af laboratorier.md  AB04 - Akkreditering af udbydere af præstationsprøvninger.md  AB05 - Akkreditering af virksomheder til produktion af referencematerialer.md  AB06 - Akkreditering til certificering.md  AB07 - Akkreditering til inspektion.md  AB08 - Akkreditering til miljøverifikation EMAS.md  AB09 - Akkreditering til validering og verifikation.md  AB10 - Akkreditering af laboratorier til fleksibelt akkrediteringsområde.md  AB11 - Måleusikkerhed i kalibrering.md  AB12 - Evaluering og rapportering af måleusikkerhed ved prøvning inden for det mekaniske fysiske og el.md  AB13 - Evaluering og rapportering af måleusikkerhed ved kemisk og mikrobiologisk prøvning.md  AB17 - INSPEKTION Bestemmelser for anvendelse af ISOIEC 170202012.md  AB18 - Akkreditering som grundlag for notificering.md  AB20 - Fleksibelt akkrediteringsområde for certificerings- inspektions- validerings- og verifikationso.md  AB21 - Evaluering af ordningerschemes i forhold til akkreditering.md  AB22 - Akkreditering til AQAP-certificering.md
Docs/Design Document/: SIMVal_Web_Calibration_Application_Requirements.md
Docs/P0/: README.md  (+10 more)
app/: __init__.py
deployment/: production.env.example
(+257 files in other folders)
